--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "invert-color": "^2.0.0",
+    "material-ui": "^0.20.2",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.13.1",
     "react-async": "^10.0.1",
     "react-bootstrap": "^1.0.0",
@@ -14,7 +20,7 @@
     "react-helmet": "^5.2.1",
     "react-rangeslider": "^2.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-select-country-list": "^2.1.2",
     "suncalc": "^1.8.0",
     "sunrise-sunset-js": "^2.1.2"
