updated to use 10 min samples

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,12 +16,12 @@ services:
         - ./backend/config:/app/config
         - ./tmp:/tmp_sounds
 
-  bot:
-    container_name: vibes_bot
-    build: ./bot
-    env_file: 
-      - 'bot/.env'
-    environment:
-      - DB_PATH=data/db.bin
-      - SOUNDS_PATH=/tmp/sounds
-    restart: always
+  # bot:
+  #   container_name: vibes_bot
+  #   build: ./bot
+  #   env_file: 
+  #     - 'bot/.env'
+  #   environment:
+  #     - DB_PATH=data/db.bin
+  #     - SOUNDS_PATH=/tmp/sounds
+  #   restart: always
