--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,25 +3,14 @@ services:
   web_server:
     build: .
     ports:
-        - "5000:5000"
+      - "5000:8000"
     environment:
-        - WEATHER_API_KEY=${WEATHER_API_KEY}
-        - WEATHER_API_ENDPOINT=${WEATHER_API_ENDPOINT}
-        - SOUND_PATH=/app/sounds
-        - CONFIG_PATH=${CONFIG_PATH}
-        - ACCESS_KEY=efcc766b-788a-4b0c-b9ed-7a308d8310a0
-        - BITRATE=128k
+      - WEATHER_API_KEY=${WEATHER_API_KEY}
+      - WEATHER_API_ENDPOINT=${WEATHER_API_ENDPOINT}
+      - SOUND_PATH=/app/sounds
+      - CONFIG_PATH=${CONFIG_PATH}
+      - ROCKET_SECRET_KEY=${ROCKET_SECRET_KEY}
     volumes:
-        - ./backend/sounds:/app/sounds
-        - ./backend/config:/app/config
-        - ./tmp:/tmp_sounds
-
-  bot:
-    container_name: vibes_bot
-    build: ./bot
-    env_file: 
-      - 'bot/.env'
-    environment:
-      - DB_PATH=data/db.bin
-      - SOUNDS_PATH=/tmp/sounds
-    restart: always
+      - ./backend/sounds_pokemon:/app/sounds
+      - ./backend/config:/app/config
+      - ./tmp:/tmp_sounds
