--- a/bot/dockerfile
+++ b/bot/dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.15.15-alpine3.14 as builder
+FROM golang:tip-alpine3.22 as builder
 
 WORKDIR /app
 COPY go.mod .
@@ -8,7 +8,7 @@ COPY . .
 RUN go build -o main .
 
 # Backend
-FROM alpine:3.14
+FROM alpine:3.22.2
 
 RUN apk update && apk upgrade && apk add --no-cache ffmpeg
 
